# VulkanShadows

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: Animation.cpp  Animation.hpp  BindlessSet.cpp  BindlessSet.hpp  Camera.cpp  Camera.hpp  Common.hpp  CommonSamplers.cpp  CommonSamplers.hpp  Configuration.cpp  Configuration.hpp  GfxSettings.hpp  GpuBuffer.cpp  GpuBuffer.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  PipelineLayoutBuilder.cpp  PipelineLayoutBuilder.hpp  RenderPassBuilder.cpp  RenderPassBuilder.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  ScenePipelines.cpp  ScenePipelines.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  VIBufferBuilder.cpp  VIBufferBuilder.hpp  Vertex.hpp  external_impl.cpp  glm.hpp  main.cpp  tiny_gltf_wrap.hpp
src/shaders/: constants.glsl  debug.frag  lighting.glsl  scene.frag  scene.glsl  scene.vert  shadowmap.frag  shadowmap.vert  shadowvolumes.geom  shadowvolumes.vert  svsilhouette.geom  textures.glsl
